Fix overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -84,6 +84,8 @@ html {
   background-color: black !important;
 }
 
-.prose p {
+.prose p,
+.prose pre {
   margin: 12px 0;
+  white-space: pre-wrap;
 }
